# aulas/aula10/swagger.yaml
@@ -44,6 +44,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Mensagem'
+      security:
+        - JWTAuth: []
   /produtos/{id}:
     get:
       tags:
@@ -128,6 +130,11 @@ paths:
                 $ref: '#/components/schemas/Mensagem'
 
 components:
+  securitySchemes:
+    JWTAuth:
+      type: apiKey
+      in: header
+      name: Authorization
   schemas:
     ArrayOfProdutos:
       type: array
