# aulas/aula11/controllers/users.js
@@ -41,4 +41,18 @@ async function entrar(req, res) {
     }
 }
 
-module.exports = {criar, entrar};
+function renovar(req, res) {
+    const token = req.headers['authorization'];
+    if (token) {
+        try {
+            const payload = jwt.verify(token, process.env.SEGREDO);
+            res.json({ token: jwt.sign({ email: payload.email }, process.env.SEGREDO)});
+        } catch (err) {
+            res.status(401).json({msg: "Token invalido."})
+        }
+    } else {
+        res.status(400).json({msg: "Token nao enviado."});
+    }
+}
+
+module.exports = {criar, entrar, renovar};
